logo alignment issue solved

--- a/css/nav-style.css
+++ b/css/nav-style.css
@@ -24,10 +24,10 @@ nav .nav-header {
 }
 
 nav .brand {
-    display: block;
-    position: relative;
+    display: flex;
+    position: inherit;
     width: 170px;
-    padding: 10px 0px;
+    padding: 5px 0px;
 }
 
 nav .brand img {
